# github-scopes-rs

./: Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: base.rs  custom_domain.rs  refresh.rs
src/: lib.rs  oauth.rs  transform.rs
