[package]
name = "github-scopes-rs"
version = "1.0.1"
authors = ["Elad Kaplan <kaplan.elad@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Discover GitHub token scope permission and return you an easy interface for checking token permission before querying GitHub"
homepage = "https://github.com/SpectralOps/github-scopes-rs"
repository = "https://github.com/SpectralOps/github-scopes-rs"
documentation = "https://docs.rs/github-scopes-rs"
readme = "README.md"
keywords = ["github", "github-api", "permissions", "oauth-app"]

[lib]
name = "github_scopes_rs"

[dependencies]
reqwest={version = "0.11.10", features=["blocking"] }
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.4"

[dev-dependencies]
mockito = "0.31.0"